# recaptcha_scraper

./: .gitignore  README.md  main.py  pyproject.toml  urls.csv
